2004-1-17  Andrew Pinski  <pinskia@physics.uc.edu>
        * config/rs6000/rs6000.c (rs6000_special_round_type_align):
        Return type is unsigned int not int.
        * config/rs6000/rs6000-protos.h (rs6000_special_round_type_align):
        Likewise.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@76081 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2004-1-17  Andrew Pinski  <pinskia@physics.uc.edu>
+
+	* config/rs6000/rs6000.c (rs6000_special_round_type_align):
+	Return type is unsigned int not int.
+	* config/rs6000/rs6000-protos.h (rs6000_special_round_type_align):
+	Likewise.
+
 2004-01-18  Joseph S. Myers  <jsm@polyomino.org.uk>
 
 	* doc/contrib.texi, doc/cppenv.texi, doc/extend.texi,
