* gcc.dg/array-quals-1.c: xfail on powerpc*-*-aix*.         * gcc.dg/const-elim-1.c: Same.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@76083 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-18  David Edelsohn  <edelsohn@gnu.org>
+
+	* gcc.dg/array-quals-1.c: xfail on powerpc*-*-aix*.
+	* gcc.dg/const-elim-1.c: Same.
+
 2004-01-17  Ziemowit Laski  <zlaski@apple.com>
 
 	* objc.dg/stret-1.m: New.
