--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-17  Bernardo Innocenti  <bernie@develer.com>
+
+	* longlong.h (mc68020, __mc68030__, mc68030, __mc68040__, mc68040,
+	mcpu32): Remove redundant checks for implied target predefines.
+
 2004-1-17  Andrew Pinski  <pinskia@physics.uc.edu>
 
 	* config/rs6000/rs6000.c (rs6000_special_round_type_align):
