--- a/gcc-3_4-branch/gcc/ChangeLog
+++ b/gcc-3_4-branch/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-17  Roger Sayle  <roger@eyesopen.com>
+
+	* builtins.c (expand_builtin_expect_jump): Fix mistake in my
+	last patch.  Use XEXP (x, 0) to get a LABEL_REF's CODE_LABEL.
+
 2004-01-17  Andrew Pinski  <pinskia@physics.uc.edu>
 
 	* config/rs6000/rs6000.c (rs6000_special_round_type_align):
