* defaults.h (ASM_OUTPUT_ADDR_VEC_ELT): Fix the computation of 	the size of a pointer in bytes.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@76112 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-18  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* defaults.h (ASM_OUTPUT_ADDR_VEC_ELT): Fix the computation of
+	the size of a pointer in bytes.
+
 2004-01-18  Roger Sayle  <roger@eyesopen.com>
 
 	* builtins.c (expand_builtin_expect_jump): Fix thinko of reusing
