* config/rs6000/rs6000.h (STRICT_ARGUMENT_NAMING): Remove.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@76113 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2004-01-18  Kazu Hirata  <kazu@cs.umass.edu>
 
+	* config/rs6000/rs6000.h (STRICT_ARGUMENT_NAMING): Remove.
+
+2004-01-18  Kazu Hirata  <kazu@cs.umass.edu>
+
 	* defaults.h (ASM_OUTPUT_ADDR_VEC_ELT): Fix the computation of
 	the size of a pointer in bytes.
 
