PR c++/13635 	* pt.c (tsubst): Use finish_typeof.
	PR c++/13635
	* g++.dg/ext/typeof7.C: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@76131 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-18  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/13635
+	* g++.dg/ext/typeof7.C: New test.
+
 2004-01-18  David Edelsohn  <edelsohn@gnu.org>
 
 	* gcc.dg/array-quals-1.c: xfail on powerpc*-*-aix*.
