--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-18  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/13635
+	* pt.c (tsubst): Use finish_typeof.
+
 2004-01-16  Jason Merrill  <jason@redhat.com>
 
 	PR c++/11725
