* defaults.h (CASE_VECTOR_PC_RELATIVE): Provide the default. 	* expr.c (CASE_VECTOR_PC_RELATIVE): Remove. 	* stmt.c (CASE_VECTOR_PC_RELATIVE): Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@76138 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,11 @@
 2004-01-18  Kazu Hirata  <kazu@cs.umass.edu>
 
+	* defaults.h (CASE_VECTOR_PC_RELATIVE): Provide the default.
+	* expr.c (CASE_VECTOR_PC_RELATIVE): Remove.
+	* stmt.c (CASE_VECTOR_PC_RELATIVE): Likewise.
+
+2004-01-18  Kazu Hirata  <kazu@cs.umass.edu>
+
 	* stmt.c (HAVE_casesi): Define it not already defined.
 	(HAVE_tablejump): Likewise.
 	(expand_end_case_type): Resort to the binary tree method if
