* gnu/java/awt/peer/gtk/TestAWT.java (DialogWindow): Make text not         visible so that dialog can be reused.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@76160 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,10 @@
 2004-01-19  Fernando Nasser  <fnasser@redhat.com>
 
+	* gnu/java/awt/peer/gtk/TestAWT.java (DialogWindow): Make text not
+	visible so that dialog can be reused.
+
+2004-01-19  Fernando Nasser  <fnasser@redhat.com>
+
 	* java/awt/EventQueue.java (getCurrentEvent): Consider that system
 	events may be handled by any queue in the stack.
 
