gcc/ 2004-01-16  Kelley Cook  <kcook@gcc.gnu.org>
	* Makefile.in (target_noncanonical, program_transform_name): Use
	immediate define instead of deferred.
	(GCC_INSTALL_NAME, GCC_TARGET_INSTALL_NAME, CPP_INSTALL_NAME,
	PROTOIZE_INSTALL_NAME, UNPROTOIZE_INSTALL_NAME, GCOV_INSTALL_NAME,
	GCCBUG_INSTALL_NAME): Define via a immediate $(shell) instead of
	deferred backquote.

gcc/cp
2004-01-16  Kelley Cook  <kcook@gcc.gnu.org>

	* Make-lang.in (CXX_INSTALL_NAME, GXX_INSTALL_NAME,
	CXX_TARGET_INSTALL_NAME, GXX_TARGET_INSTALL_NAME): Define via a
	immediate $(shell) instead of deferred backquote.

gcc/f
2004-01-16  Kelley Cook  <kcook@gcc.gnu.org>

	* Make-lang.in (G77_INSTALL_NAME): Define via a immediate $(shell)
	instead of deferred backquote.

gcc/java
2004-01-16  Kelley Cook  <kcook@gcc.gnu.org>

	* Make-lang.in (JAVA_INSTALL_NAME, JAVA_TARGET_INSTALL_NAME,
	GCJH_TARGET_INSTALL_NAME): Define via a immediate $(shell)
	instead of deferred backquote.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@76193 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,12 @@
+2004-01-20  Kelley Cook  <kcook@gcc.gnu.org>
+
+	* Makefile.in (target_noncanonical, program_transform_name): Use 
+	immediate define instead of deferred.
+	(GCC_INSTALL_NAME, GCC_TARGET_INSTALL_NAME, CPP_INSTALL_NAME, 
+	PROTOIZE_INSTALL_NAME, UNPROTOIZE_INSTALL_NAME, GCOV_INSTALL_NAME,
+	GCCBUG_INSTALL_NAME): Define via a immediate $(shell) instead of
+	deferred backquote.
+
 2004-01-20  Joseph S. Myers  <jsm@polyomino.org.uk>
 
 	* c-decl.c (c_init_decl_processing): Set pedantic_lvalues to
