Implement a cache for linemap_lookup. 	* line-map.h (struct_line_maps):  Add cache field. 	* line-map.c (linemap_init):  Zero cache field. 	(linemap_add):  Set cache field to offset of newly allocated map. 	(linemap_lookup):  Use and set cache field.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@76197 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2003-01-20  Per Bothner  <pbothner@apple.com>
+
+	Implement a cache for linemap_lookup.
+	* line-map.h (struct_line_maps):  Add cache field.
+	* line-map.c (linemap_init):  Zero cache field.
+	(linemap_add):  Set cache field to offset of newly allocated map.
+	(linemap_lookup):  Use and set cache field.
+
 2004-01-20  Kaz Kojima  <kkojima@gcc.gnu.org>
 
 	PR optimization/13567
