(TARGET_M32R2). Test for TARGET_M32R2_MASK not TARGET_M32RX_MASK.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@76204 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-20  Kazuhiro Inaoka  <inaoka.kazuhiro@renesas.com>
+
+	* config/m32r/m32r.h (TARGET_M32R2). Test for TARGET_M32R2_MASK
+	not TARGET_M32RX_MASK.
+
 2004-01-20  Eric Botcazou  <ebotcazou@libertysurf.fr>
 
 	PR target/13557
