--- a/gcc-3_3-rhl-branch/ChangeLog
+++ b/gcc-3_3-rhl-branch/ChangeLog
@@ -1,3 +1,11 @@
+2004-01-17  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>
+
+	* MAINTAINERS: Remove entries without email address.
+
+2004-01-10  Richard Sandiford  <rsandifo@redhat.com>
+
+	* MAINTAINERS: Add myself as a MIPS maintainer.
+
 2004-01-04  Eric Botcazou  <ebotcazou@libertysurf.fr>
 
 	* MAINTAINERS: Move myself from 'Write After Approval' to
