--- a/gcc-3_3-rhl-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_3-rhl-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-11  Jakub Jelinek  <jakub@redhat.com>
+
+	PR middle-end/13392
+	* g++.dg/opt/expect2.C: New test.
+
 2003-12-19  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.dg/cleanup-10.c: New test.
