* config/avr/avr.h (BASE_REG_CLASS): Don't permit to use X 	register as pointer after reload.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@76216 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-20  Denis Chertykov  <denisc@overta.ru>
+
+	* config/avr/avr.h (BASE_REG_CLASS): Don't permit to use X
+	register as pointer after reload.
+
 2004-01-20  Zdenek Dvorak  <rakdver@atrey.karlin.mff.cuni.cz>
 
 	PR optimization/12440
